Added ExoPlayer to the details view. Added more logic to the details view. Updated UI for the steps list.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,12 @@
         <item quantity="one">%d serving</item>
         <item quantity="other">%d servings</item>
     </plurals>
+
+    <string name="step">Step %d</string>
+
     <string name="title_step_list">Steps</string>
     <string name="title_step_detail">Step Detail</string>
 
     <string name="ingredients">Ingredients</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
